map notes and link

--- a/index.html
+++ b/index.html
@@ -341,10 +341,11 @@
 			<div class="four columns" style="margin-top: 2%; margin-left: 0;">
 				<p>Especially on the east side, many of Muskogee’s neighborhoods are at least as stable and desirable as those in competing neighborhoods just outside the city line. This market strength represents a solid foundation to build from as Muskogee seeks to attract more people, families, and local employees to live in the city.</p>
 				<p>The neighborhoods in Muskogee that are less competitive in today’s market represent inventories lower-cost housing and vacant properties that could be systematically renovated and rebuilt over time to provide a renewed supply of quality, attainable housing stock.</p>
+				<p>The map at right compares neighborhoods within and around Muskogee in terms of their relative stability and market condition. The map includes additional layers supporting this assessment, including parcel value per acre which helps highlight properties that are particularly well-invested or under-invested.</p>
 			</div>
 			<div class="eight columns" style="margin-top: 2%">
 				<iframe src="muskogeeNCDraft.html" width="100%" height="600px" scrolling="no" style="border: none; overflow-x: hidden; overflow-y: auto;"></iframe>
-				<p>Housing and neighborhood assessment.</p>
+				<p>Housing and neighborhood condition assessment. <a href="./muskogeeNCDraft.html" target="_blank">Explore in full screen.</a></p>
 			</div>
 		</div>
 
