added survey links

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 						<a href="#Top"><span class="fa fa-arrow-up"></span> Top</a>
 						<a href="#Overview">Overview </a>
 						<a href="#Findings">Key indicators </a>
+						<a href="https://form.jotform.com/251413502214037" target="blank">Survey</a>
 						<!-- <a href="#Strategies">Strategies</a> -->
 					</div>
 					<div id="clickDiv" class="mobile-menu-icon">
@@ -121,6 +122,7 @@
 				<a href="#Top"><span class="fa fa-arrow-up"></span> Top</a>
 				<a href="#Overview">Overview </a>
 				<a href="#Findings">Key indicators </a>
+				<a href="https://form.jotform.com/251413502214037" target="blank">Survey</a>
 				<!-- <a href="#Strategies">Strategies</a> -->
 			</div>
 		</div>
@@ -139,6 +141,7 @@
 						<a href="#Findings"><button class="button-primary">Key indicators from the analysis</button></a>
 						<a href="#Target"><button class="button-primary">Housing production target</button></a>
 						<a href="#Strategies"><button class="button-primary">Strategies</button></a>
+						<a href="https://form.jotform.com/251413502214037" target="blank"><button class="button-primary"><span class="fa fa-bullhorn"></span>Take the survey</button></a>
 					</div>
 				</div>
 			</div>
