--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<!-- Metadata 2024 -->
 	<meta charset="utf-8">
-	<title>Housing Study</title>
+	<title>Muskogee Comprehensive Housing Study</title>
 	<meta name="description" content="Explore the Muskogee Comprehensive Housing Study.">
 	<meta name="keywords" content="Muskogee, Oklahoma, Housing, Urban Planning, CommunityScale, Assessment, Dashboard">
 	<meta name="author" content="CommunityScale">
@@ -143,6 +143,18 @@
 						<a href="#Strategies"><button class="button-primary">Strategies</button></a>
 						<a href="https://form.jotform.com/251413502214037" target="blank"><button class="button-primary"><span class="fa fa-bullhorn"></span>Take the survey</button></a>
 					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="divider" style="background-color: rgb(203,196,180); scroll-margin-top: 0px; padding-top: 0px; padding-bottom: 0px;">
+		<div class="container" style="margin-top: 0">
+			<div class="row">
+				<div class="ten columns" style="margin-top: 0%;">
+					<h5><b><span class="fa fa-bullhorn"></span> Take the online survey! </b> <span class="fa fa-bullhorn"></span></h5>
+					<p>Please complete the <a href="https://form.jotform.com/251105346624147">online survey</a> for an opportunity to share your perspective and priorities as the Comprehensive Houing Study's recommendations take shape.</p>
+					<p>Before completing the survey, review the analysis and observations summarized below for helpful context about the study's goals and draft findings as you answer the survey questions.</p>
 				</div>
 			</div>
 		</div>
